Extracted jwt secret to config file, POST to ListingController#save is now secured, added a global exception handler, created a custom AuthenticationToken